# mega-scraper-efator

./: .env  Inventario.csv  Makefile  README.md  TODO.txt  docker-compose-devdb.yml  pyproject.toml
app/app/: admin.py  importcsv.py  models.py  scrap.py  scrap_standalone.py  settings.py  urls.py  views.py
app/app/migrations/: 0001_initial.py  0002_alter_produtos_fornecedor_alter_produtos_grupo_and_more.py  0003_alter_produtos_custocompra.py
app/app/templates/: importcsv.html
