[tool.poetry]
name = "mega-scraper-efator"
version = "0.1.0"
description = ""
authors = ["Felipe O. Aviz <felipe@aupi.com.br>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.1"
black = "^24.1.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
prettyconf = "^2.2.1"
psycopg2 = "^2.9.9"
django-cors-headers = "^4.3.1"
selenium = "^4.18.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
